--- a/gleam.toml
+++ b/gleam.toml
@@ -11,6 +11,8 @@ gleam_otp = "~> 0.10"
 glisten = "~> 2.0"
 birl = ">= 1.6.1 and < 2.0.0"
 argv = ">= 1.0.2 and < 2.0.0"
+file_streams = ">= 1.1.1 and < 2.0.0"
+filepath = ">= 1.0.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
