--- a/gleam.toml
+++ b/gleam.toml
@@ -15,6 +15,7 @@ file_streams = ">= 1.1.1 and < 2.0.0"
 filepath = ">= 1.0.0 and < 2.0.0"
 gleam_regexp = ">= 1.0.0 and < 2.0.0"
 ids = ">= 0.13.0 and < 1.0.0"
+mug = ">= 1.1.1 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
