--- a/gleam.toml
+++ b/gleam.toml
@@ -1,21 +1,18 @@
 name = "codecrafters_redis"
 version = "1.0.0"
 
-# For a full reference of all the available options, you can have a look at
-# https://gleam.run/writing-gleam/gleam-toml/.
-
 [dependencies]
-gleam_stdlib = "~> 0.34 or ~> 1.0"
-gleam_erlang = "~> 0.25"
-gleam_otp = "~> 0.10"
-glisten = "~> 6.0"
-birl = ">= 1.6.1 and < 2.0.0"
-argv = ">= 1.0.2 and < 2.0.0"
-file_streams = ">= 1.1.1 and < 2.0.0"
-filepath = ">= 1.0.0 and < 2.0.0"
-gleam_regexp = ">= 1.0.0 and < 2.0.0"
-ids = ">= 0.13.0 and < 1.0.0"
-mug = ">= 1.1.1 and < 2.0.0"
+gleam_stdlib = "== 0.53.0"
+gleam_erlang = "== 0.34.0"
+gleam_otp = "== 0.16.1"
+glisten = "== 7.0.1"
+birl = "== 1.8.0"
+argv = "== 1.0.2"
+file_streams = "== 1.4.0"
+filepath = "== 1.0.0"
+gleam_regexp = "== 1.1.0"
+ids = "== 0.14.0"
+mug = "== 1.2.0"
 
 [dev-dependencies]
-gleeunit = "~> 1.0"
+gleeunit = "== 1.3.0"
